# weather-logger

./: .gitignore  README.md
ansible_files/: ansible.cfg  automate_weatherlogging.yml  check_n_add.sh  current_hosts  delete_old.sh  install-weather-app-script.sh  weather-app-script.sh  weather_app_config
poetry_package/: main.py  pyproject.toml
poetry_package/weather_logger/: get_weather_info.py  main.py
